# pdf-translator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pdf_translator/: args_parser.py  main.py  settings.py
